Bug 1285640: Move mozHunspell::CollectReports definition from .h file to .cpp file, to avoid clang 3.9 warning about static variable declared in header. r=njn

MozReview-Commit-ID: 8mUP6zYPhIO